WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165551
:hover rule causes a single tap to not activate a slotted anchor element
https://bugs.webkit.org/show_bug.cgi?id=165551
Summary
:hover rule causes a single tap to not activate a slotted anchor element
Derek Gray
Reported
2016-12-07 14:38:13 PST
Example to reproduce here:
https://gist.github.com/tuespetre/678f13f3a55a3644f0084ce8bc217479
Note that this applies also to fallback content within a slot that is the fallback content of another slot. There is just a lot of weirdness around this area.
Attachments
Reproduction in comment #0
(998 bytes, text/html)
2016-12-07 23:22 PST
,
Ryosuke Niwa
no flags
Details
Adds a test
(3.01 KB, patch)
2016-12-12 18:09 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews100 for mac-yosemite
(934.22 KB, application/zip)
2016-12-12 18:47 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews104 for mac-yosemite-wk2
(1.13 MB, application/zip)
2016-12-12 18:52 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews116 for mac-yosemite
(1.76 MB, application/zip)
2016-12-12 18:58 PST
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(
deleted
)
2016-12-12 19:11 PST
,
Build Bot
no flags
Details
Adds a test and fixes a bug
(8.86 KB, patch)
2016-12-12 22:18 PST
,
Ryosuke Niwa
koivisto
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews125 for ios-simulator-wk2
(
deleted
)
2016-12-12 23:42 PST
,
Build Bot
no flags
Details
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2016-12-07 23:22:44 PST
Created
attachment 296497
[details]
Reproduction in
comment #0
Ryosuke Niwa
Comment 2
2016-12-07 23:26:03 PST
I can reproduce this on iOS 10 but it’s fixed on the latest WebKit build on iOS.
Derek Gray
Comment 3
2016-12-08 06:00:59 PST
That's good to know. Thanks Ryosuke
Ryosuke Niwa
Comment 4
2016-12-09 23:57:23 PST
This was fixed by
https://trac.webkit.org/changeset/209065
. Let's actually add a test.
Ryosuke Niwa
Comment 5
2016-12-12 18:09:40 PST
Created
attachment 296976
[details]
Adds a test
Ryosuke Niwa
Comment 6
2016-12-12 18:12:16 PST
<
rdar://problem/29632041
>
Build Bot
Comment 7
2016-12-12 18:47:27 PST
Comment on
attachment 296976
[details]
Adds a test
Attachment 296976
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/2709142
New failing tests: fast/shadow-dom/click-on-slotted-anchor-with-hover.html
Build Bot
Comment 8
2016-12-12 18:47:31 PST
Created
attachment 296977
[details]
Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-12-12 18:52:18 PST
Comment on
attachment 296976
[details]
Adds a test
Attachment 296976
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/2709156
New failing tests: fast/shadow-dom/click-on-slotted-anchor-with-hover.html
Build Bot
Comment 10
2016-12-12 18:52:21 PST
Created
attachment 296978
[details]
Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 11
2016-12-12 18:58:11 PST
Comment on
attachment 296976
[details]
Adds a test
Attachment 296976
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/2709160
New failing tests: fast/shadow-dom/click-on-slotted-anchor-with-hover.html
Build Bot
Comment 12
2016-12-12 18:58:15 PST
Created
attachment 296980
[details]
Archive of layout-test-results from ews116 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews116 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 13
2016-12-12 19:11:49 PST
Comment on
attachment 296976
[details]
Adds a test
Attachment 296976
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2709179
New failing tests: fast/shadow-dom/click-on-slotted-anchor-with-hover.html
Build Bot
Comment 14
2016-12-12 19:11:55 PST
Created
attachment 296982
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Ryosuke Niwa
Comment 15
2016-12-12 22:18:27 PST
Created
attachment 296990
[details]
Adds a test and fixes a bug
Build Bot
Comment 16
2016-12-12 23:42:20 PST
Comment on
attachment 296990
[details]
Adds a test and fixes a bug
Attachment 296990
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/2710680
New failing tests: fast/shadow-dom/click-on-slotted-anchor-with-hover.html
Build Bot
Comment 17
2016-12-12 23:42:27 PST
Created
attachment 296992
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.6
Antti Koivisto
Comment 18
2016-12-13 01:17:22 PST
Comment on
attachment 296990
[details]
Adds a test and fixes a bug View in context:
https://bugs.webkit.org/attachment.cgi?id=296990&action=review
> Source/WebCore/page/ios/FrameIOS.mm:263 > + for (Node* node = hitTestResult.innerNode(); node && node != terminationNode; node = node->parentInComposedTree()) { > + ASSERT(!node->isInShadowTree() || node->containingShadowRoot()->mode() != ShadowRootMode::UserAgent);
The assert doesn't look correct. With <details> you can move from normal tree to UA shadow tree.
Ryosuke Niwa
Comment 19
2016-12-13 15:22:38 PST
Committed
r209780
: <
http://trac.webkit.org/changeset/209780
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug